fix word wrapping, add padding, and make terminal expand vertically

--- a/src/comp/Terminal/Terminal.css
+++ b/src/comp/Terminal/Terminal.css
@@ -1,14 +1,19 @@
 .terminal {
   background-color: #000;
   max-width: 100vw;
-  max-height: 100vh;
-  width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   color: #ddd;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   white-space: pre;
+  padding: 5px;
+
+  > .term-content {
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    overflow-wrap: anywhere;
+  }
 
   > .prompt {
     display: inline-block;
